--- a/portfolio/pom.xml
+++ b/portfolio/pom.xml
@@ -37,6 +37,11 @@
     
   <build>
     <plugins>
+    <plugin>
+        <groupId>com.hubspot.maven.plugins</groupId>
+        <artifactId>prettier-maven-plugin</artifactId>
+        <version>0.8</version>
+    </plugin>
       <!-- Provides `mvn package appengine:run` for local testing
            and `mvn package appengine:deploy` for deploying. -->
       <plugin>
