add algo for scheduling meeting having both mendatory and optional attendees

--- a/walkthroughs/week-5-tdd/project/src/test/java/pom.xml
+++ b/walkthroughs/week-5-tdd/project/src/test/java/pom.xml
@@ -42,6 +42,12 @@
 
   <build>
     <plugins>
+    
+    <plugin>
+        <groupId>com.hubspot.maven.plugins</groupId>
+        <artifactId>prettier-maven-plugin</artifactId>
+        <version>0.8</version>
+    </plugin>
       <plugin>
         <groupId>com.google.cloud.tools</groupId>
         <artifactId>appengine-maven-plugin</artifactId>
