--- a/portfolio/pom.xml
+++ b/portfolio/pom.xml
@@ -57,23 +57,28 @@
     
   <build>
     <plugins>
-    <plugin>
-        <groupId>com.hubspot.maven.plugins</groupId>
-        <artifactId>prettier-maven-plugin</artifactId>
-        <version>0.8</version>
-    </plugin>
-      <!-- Provides `mvn package appengine:run` for local testing
-           and `mvn package appengine:deploy` for deploying. -->
-      <plugin>
-        <groupId>com.google.cloud.tools</groupId>
-        <artifactId>appengine-maven-plugin</artifactId>
-        <version>2.2.0</version>
-        <configuration>
-          <!-- TODO: set project ID. -->
-          <deploy.projectId>YOUR_PROJECT_ID_HERE</deploy.projectId>
-          <deploy.version>1</deploy.version>
-        </configuration>
-      </plugin>
+        <plugin>
+            <groupId>com.hubspot.maven.plugins</groupId>
+            <artifactId>prettier-maven-plugin</artifactId>
+            <version>0.8</version>
+        </plugin>
+        <!-- Provides `mvn package appengine:run` for local testing
+            and `mvn package appengine:deploy` for deploying. -->
+        <plugin>
+            <groupId>com.google.cloud.tools</groupId>
+            <artifactId>appengine-maven-plugin</artifactId>
+            <version>2.2.0</version>
+            <configuration>
+            <!-- TODO: set project ID. -->
+            <deploy.projectId>YOUR_PROJECT_ID_HERE</deploy.projectId>
+            <deploy.version>1</deploy.version>
+            </configuration>
+        </plugin>
+        <plugin>
+            <groupId>com.lewisd</groupId>
+            <artifactId>lint-maven-plugin</artifactId>
+            <version>0.0.8</version>
+        </plugin>
     </plugins>
   </build>
 </project>
